Fixed excel save error and ran all cells

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -28,7 +28,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Only required if you didn't install the module yet\n",
+    "# Only required if you didn't install the module yet. Uncomment the second line and comment out the third line if you wish to use the official release.\n",
     "# !pip install SBTi\n",
     "!pip install git+git://github.com/OFBDABV/SBTi"
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "time_frames = [SBTi.interfaces.ETimeFrames.MID]\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "temperature_score = TemperatureScore(\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)\n",
@@ -302,21 +302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "                    company_name    company_id  temperature_results\n0    Advanced Micro Devices, Inc  US0079031078             0.000000\n2    Advanced Micro Devices, Inc  US0079031078             0.727326\n3             Adobe Systems Inc.  US00724F1012             0.000000\n5             Adobe Systems Inc.  US00724F1012             0.000000\n6                Capgemini Group  FR0000125338             1.000000\n..                           ...           ...                  ...\n140                   Company AD  KE0000000030             1.000000\n141                   Company AE  TH0000000031             1.000000\n143                   Company AE  TH0000000031             1.000000\n144                   Company AF  ID0000000032             1.000000\n146                   Company AF  ID0000000032             1.000000\n\n[98 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>company_name</th>\n      <th>company_id</th>\n      <th>temperature_results</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Advanced Micro Devices, Inc</td>\n      <td>US0079031078</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Advanced Micro Devices, Inc</td>\n      <td>US0079031078</td>\n      <td>0.727326</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Adobe Systems Inc.</td>\n      <td>US00724F1012</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Adobe Systems Inc.</td>\n      <td>US00724F1012</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Capgemini Group</td>\n      <td>FR0000125338</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>140</th>\n      <td>Company AD</td>\n      <td>KE0000000030</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>141</th>\n      <td>Company AE</td>\n      <td>TH0000000031</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>143</th>\n      <td>Company AE</td>\n      <td>TH0000000031</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>144</th>\n      <td>Company AF</td>\n      <td>ID0000000032</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>146</th>\n      <td>Company AF</td>\n      <td>ID0000000032</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>98 rows × 3 columns</p>\n</div>"
+      "text/plain": "                    company_name   scope    company_id  temperature_results\n0    Advanced Micro Devices, Inc    S1S2  US0079031078             0.000000\n2    Advanced Micro Devices, Inc  S1S2S3  US0079031078             0.727326\n3             Adobe Systems Inc.    S1S2  US00724F1012             0.000000\n5             Adobe Systems Inc.  S1S2S3  US00724F1012             0.000000\n6                Capgemini Group    S1S2  FR0000125338             1.000000\n..                           ...     ...           ...                  ...\n140                   Company AD  S1S2S3  KE0000000030             1.000000\n141                   Company AE    S1S2  TH0000000031             1.000000\n143                   Company AE  S1S2S3  TH0000000031             1.000000\n144                   Company AF    S1S2  ID0000000032             1.000000\n146                   Company AF  S1S2S3  ID0000000032             1.000000\n\n[98 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>company_name</th>\n      <th>scope</th>\n      <th>company_id</th>\n      <th>temperature_results</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Advanced Micro Devices, Inc</td>\n      <td>S1S2</td>\n      <td>US0079031078</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Advanced Micro Devices, Inc</td>\n      <td>S1S2S3</td>\n      <td>US0079031078</td>\n      <td>0.727326</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Adobe Systems Inc.</td>\n      <td>S1S2</td>\n      <td>US00724F1012</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Adobe Systems Inc.</td>\n      <td>S1S2S3</td>\n      <td>US00724F1012</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Capgemini Group</td>\n      <td>S1S2</td>\n      <td>FR0000125338</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>140</th>\n      <td>Company AD</td>\n      <td>S1S2S3</td>\n      <td>KE0000000030</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>141</th>\n      <td>Company AE</td>\n      <td>S1S2</td>\n      <td>TH0000000031</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>143</th>\n      <td>Company AE</td>\n      <td>S1S2S3</td>\n      <td>TH0000000031</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>144</th>\n      <td>Company AF</td>\n      <td>S1S2</td>\n      <td>ID0000000032</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>146</th>\n      <td>Company AF</td>\n      <td>S1S2S3</td>\n      <td>ID0000000032</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>98 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Percentage of score based on default score\n",
-    "amended_portfolio[['company_name', 'company_id', 'temperature_results']]"
+    "amended_portfolio[['company_name', 'scope', 'company_id', 'temperature_results']]"
    ],
    "metadata": {
     "collapsed": false,
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "portfolio, provider = anonymize(portfolio, provider)"
@@ -404,14 +404,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "portfolio_filename = 'portfolio.xlsx'\n",
     "provider_filename = 'provider.xlsx'\n",
     "portfolio.to_excel(portfolio_filename, index=False)\n",
-    "provider.data['fundamental_data'].to_excel(provider_filename, sheet_name='fundamental_data', index=False)\n",
-    "provider.data['target_data'].to_excel(provider_filename, sheet_name='target_data', index=False)"
+    "\n",
+    "writer = pd.ExcelWriter(provider_filename, engine='openpyxl')\n",
+    "provider.data['fundamental_data'].to_excel(writer, sheet_name='fundamental_data')\n",
+    "provider.data['target_data'].to_excel(writer, sheet_name='target_data')\n",
+    "writer.save()"
    ],
    "metadata": {
     "collapsed": false,
@@ -440,13 +443,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "If you use the SBTi tool from a docker container, for each of the following 3 cells:\n",
+    "If you use the SBTi tool from a docker container, for the following cell:\n",
     "- Run the cell\n",
     "- Open an Excel file\n",
-    "- Right-click an Excel cell and click 'paste' or select an Excel cell and press Ctrl+v\n",
-    "- Save the Excel file\n",
-    "\n",
-    "You have then finished the notebook."
+    "- Right-click an Excel cell and click 'paste', or select an Excel cell and press Ctrl+v\n",
+    "- Save the Excel file"
    ],
    "metadata": {
     "collapsed": false,
@@ -470,6 +471,22 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Then:\n",
+    "- Run the following cell\n",
+    "- Open a new Excel file\n",
+    "- Change the sheet name to 'fundamental_data'\n",
+    "- Right-click an Excel cell and click 'paste', or select an Excel cell and press Ctrl+v"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "source": [
     "provider.data['fundamental_data'].to_clipboard(excel=True, index=False)"
@@ -480,12 +497,31 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": []
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Then:\n",
+    "- Run the following cell\n",
+    "- Create a new sheet in your Excel file\n",
+    "- Rename the new sheet to 'target_data'\n",
+    "- Right-click an Excel cell in the 'target_data'-sheet and click 'paste', or select an Excel cell and press Ctrl+v\n",
+    "- Save the Excel file\n",
+    "\n",
+    "You have then finished the notebook."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "provider.data['target_data'].to_clipboard(excel=True, index=False)"
