Changed SBTi install at beginning of notebooks

--- a/examples/3_portfolio_aggregations.ipynb
+++ b/examples/3_portfolio_aggregations.ipynb
@@ -22,8 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Only required if you didn't install the module yet\n",
-    "!pip install SBTi"
+    "# Only required if you didn't install the module yet. Uncomment the second line and comment out the third line if you wish to use the official release.\n",
+    "# !pip install SBTi\n",
+    "!pip install git+git://github.com/OFBDABV/SBTi"
    ]
   },
   {
