Removed excel clipboard copy at end of notebooks

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -277,6 +277,10 @@
    "outputs": [],
    "source": [
     "# Uncomment the second line and comment out the third line if you wish to use the official release.\n",
+    "# !pip install SBTi\n",
+    "!pip install git+git://github.com/OFBDABV/SBTi\n",
+    "\n",
+    "# Install other Python modules required to use this notebook\n",
     "!pip install -r requirements.txt"
    ],
    "metadata": {
@@ -1427,38 +1431,6 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "If you use the SBTi tool from a docker container:\n",
-    "- Run the cell below\n",
-    "- Open an Excel file\n",
-    "- Right-click an Excel cell and click 'paste' or select an Excel cell and press Ctrl+v\n",
-    "- Save the Excel file\n",
-    "\n",
-    "You have then finished the notebook."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [],
-   "source": [
-    "amended_portfolio.to_clipboard(excel=True, index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   }
