--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -28,7 +28,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Only required if you didn't install the module yet. Uncomment the second line and comment out the third line if you wish to use the official release.\n",
+    "# Uncomment the second line and comment out the third line if you wish to use the official release.\n",
     "# !pip install SBTi\n",
     "!pip install git+git://github.com/OFBDABV/SBTi"
    ],
@@ -437,99 +437,6 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "If you use the SBTi tool from a docker container, for the following cell:\n",
-    "- Run the cell\n",
-    "- Open an Excel file\n",
-    "- Right-click an Excel cell and click 'paste', or select an Excel cell and press Ctrl+v\n",
-    "- Save the Excel file"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [
-    "portfolio.to_clipboard(excel=True, index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Then:\n",
-    "- Run the following cell\n",
-    "- Open a new Excel file\n",
-    "- Change the sheet name to 'fundamental_data'\n",
-    "- Right-click an Excel cell and click 'paste', or select an Excel cell and press Ctrl+v"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "provider.data['fundamental_data'].to_clipboard(excel=True, index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "execution_count": 14,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Then:\n",
-    "- Run the following cell\n",
-    "- Create a new sheet in your Excel file\n",
-    "- Rename the new sheet to 'target_data'\n",
-    "- Right-click an Excel cell in the 'target_data'-sheet and click 'paste', or select an Excel cell and press Ctrl+v\n",
-    "- Save the Excel file\n",
-    "\n",
-    "You have then finished the notebook."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
-   "source": [
-    "provider.data['target_data'].to_clipboard(excel=True, index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   }
