--- a/examples/1_getting_started.ipynb
+++ b/examples/1_getting_started.ipynb
@@ -65,8 +65,8 @@
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
-    "if not os.path.isfile(\"example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")"
+    "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"example_portfolio.csv\")"
    ]
   },
   {
