--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -84,9 +84,9 @@
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
     "if not os.path.isfile(\"utils.py\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/%23210_David/examples/utils.py\", \"utils.py\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
     "try:  # Import statement when run in Google Colabs\n",
     "    from utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
     "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores\n",
