Changed header levels

--- a/examples/3_portfolio_aggregations.ipynb
+++ b/examples/3_portfolio_aggregations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Portfolio aggregations\n",
+    "## Portfolio aggregations\n",
     "In this notebook we'll give some examples on how the portfolio aggregation methods can be used."
    ]
   },
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting up\n",
+    "#### Setting up\n",
     "We'll set up the imports, data providers, and load the portfolio. For more details about this, please have a look at notebook one (getting started)."
    ]
   },
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate the aggregated temperature score\n",
+    "#### Calculate the aggregated temperature score\n",
     "Calculate an aggregated temperature score. This can be done use different aggregation methods. The termperature scores are calculated per time-frame/scope combination."
    ]
   },
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### WATS\n",
+    "##### WATS\n",
     "Weighted Average Temperature Score (WATS): Temperature scores are allocated based on portfolio weights.\n",
     "This requires the \"investment_value\" field to be defined in your data set."
    ]
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TETS\n",
+    "##### TETS\n",
     "Total emissions weighted temperature score (TETS): Temperature scores are allocated based on historical emission weights using total company emissions. "
    ]
   },
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### MOTS\n",
+    "##### MOTS\n",
     "Market Owned emissions weighted temperature score (MOTS): Temperature scores are allocated based on an equity ownership approach."
    ]
   },
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### EOTS\n",
+    "##### EOTS\n",
     "Enterprise Owned emissions weighted temperature score (EOTS): Temperature scores are allocated based\n",
     "on an enterprise ownership approach. "
    ]
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ECOTS\n",
+    "##### ECOTS\n",
     "Enterprise Value + Cash emissions weighted temperature score (ECOTS): Temperature scores are allocated based on an enterprise value (EV) plus cash & equivalents ownership approach. "
    ]
   },
@@ -282,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### AOTS\n",
+    "##### AOTS\n",
     "Total Assets emissions weighted temperature score (AOTS): Temperature scores are allocated based on a total assets ownership approach. "
    ]
   },
