--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# SBTi-Finance Tool for Temperature Scoring & Portfolio Coverage - Target Reporting\n",
+    "## SBTi-Finance Tool for Temperature Scoring & Portfolio Coverage - Target Reporting\n",
     "This notebook can be used to compute your portfolio's temperature scores and save the results for SBTi's Target Validation Team (TVT) to check their validity."
    ]
   },
@@ -64,7 +64,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Download resources for Google Colab environment"
+    "#### Download resources for Google Colab environment"
    ],
    "metadata": {
     "collapsed": false
@@ -214,7 +214,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Checks\n",
+    "### Checks\n",
     "The following scores are performed:\n",
     "- Portfolio score\n",
     "- Score per sector\n",
