Fixed version install error

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -280,8 +280,8 @@
     "!pip install git+git://github.com/OFBDABV/SBTi\n",
     "\n",
     "# Install other Python modules required to use this notebook\n",
-    "!pip install matplotlib=3.2.2\n",
-    "!pip install openpyxl=2.5.9"
+    "!pip install matplotlib==3.2.2\n",
+    "!pip install openpyxl==2.5.9"
    ],
    "metadata": {
     "collapsed": false,
