--- a/examples/3_scenarios.ipynb
+++ b/examples/3_scenarios.ipynb
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
-    "df_portfolio = pd.read_csv(\"example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "companies = SBTi.utils.dataframe_to_portfolio(df_portfolio)\n",
     "portfolio_data = SBTi.utils.get_data([provider], companies)"
    ]
@@ -427,6 +427,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
