--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## SBTi-Finance Tool for Temperature Scoring & Portfolio Coverage\n",
+    "# SBTi-Finance Tool for Temperature Scoring & Portfolio Coverage\n",
     "#### Do you want to understand what drives the temperature score of your portfolio to make better engagement and investment decisions?\n",
     "\n",
     "![ExampleGraphs](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_HeroImage.jpg)"
@@ -1452,6 +1452,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
