--- a/examples/3_scenarios.ipynb
+++ b/examples/3_scenarios.ipynb
@@ -85,7 +85,7 @@
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"example_portfolio.csv\")"
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")"
    ]
   },
   {
