--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# SBTi-Finance Tool for Temperature Scoring & Portfolio Coverage\n",
-    "#### Do you want to understand what drives the temperature score of your portfolio to make better engagement and investment decisions?\n",
+    "***Do you want to understand what drives the temperature score of your portfolio to make better engagement and investment decisions?***\n",
     "\n",
     "![ExampleGraphs](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_HeroImage.jpg)"
    ],
