--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -322,9 +322,7 @@
     }
    ],
    "source": [
-    "# Uncomment the second line and comment out the third line if you wish to use the official release.\n",
-    "# !pip install SBTi\n",
-    "!pip install git+git://github.com/OFBDABV/SBTi\n",
+    "!pip install SBTi\n",
     "\n",
     "# Install other Python modules required to use this notebook\n",
     "!pip install matplotlib==3.2.2\n",
@@ -2272,10 +2270,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
