--- a/examples/4_portfolio_aggregations.ipynb
+++ b/examples/4_portfolio_aggregations.ipynb
@@ -28,9 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Only required if you didn't install the module yet. Uncomment the second line and comment out the third line if you wish to use the official release.\n",
-    "# !pip install SBTi\n",
-    "!pip install git+git://github.com/OFBDABV/SBTi"
+    "!pip install SBTi"
    ]
   },
   {
@@ -444,10 +442,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
