--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -54,9 +54,7 @@
     }
    ],
    "source": [
-    "# Uncomment the second line and comment out the third line if you wish to use the official release.\n",
-    "# !pip install SBTi\n",
-    "!pip install git+git://github.com/OFBDABV/SBTi"
+    "!pip install SBTi"
    ]
   },
   {
@@ -1149,10 +1147,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
