adjusted utils.py support for Colab notebooks

--- a/examples/2_getting_started.ipynb
+++ b/examples/2_getting_started.ipynb
@@ -107,8 +107,10 @@
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"example_portfolio.csv\")\n",
-    "\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
+    "if not os.path.isfile(\"utils.py\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
+    "    \n",
     "try:  # Import statement when run in Google Colabs\n",
     "    from utils import  print_aggregations\n",
     "except:  # Import statement when run locally\n",
