--- a/examples/4_portfolio_aggregations.ipynb
+++ b/examples/4_portfolio_aggregations.ipynb
@@ -66,6 +66,8 @@
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
+    "if not os.path.isfile(\"utils.py\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
     "\n",
     "try:  # Import statement when run in Google Colabs\n",
     "    from utils import  print_aggregations\n",
