added link to ipcc database

--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -574,13 +574,15 @@
     "The target protocol represents the first step of the process, which is to convert individual targets of various formats into temperature scores.\n",
     "This is achieved by generating simple regression models for estimated warming in 2100 from climate scenarios with short, medium, and long-term\n",
     "trends in metrics like absolute emissions or emissions intensities. Regression models are generated based on scenarios in the IPCC Special\n",
-    "Report on 1.5°C scenario database. In addition to defining methods for disclosed targets, this step outlines the\n",
+    "Report on [1.5°C scenario database](https://www.ipcc.ch/sr15/). In addition to defining methods for disclosed targets, this step outlines the\n",
     "methodology used to define a default score to be applied to all non-disclosing companies.\n",
     "\n",
     "This stage will map the targets to the existing regression models, which uses the ISIC sector classification to link to target to the\n",
     "appropriate regression model. For example, a company in the power sector with an intensity target using a per MWh activity would be\n",
     "mapped to the power generation temperature pathway. The table below summarises the ISIC classifications and how the targets are mapped\n",
-    "to regression models."
+    "to regression models.\n",
+    "\n",
+    "![RegressionModels](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_RegressionModels.png)"
    ]
   },
   {
