update analysis & anonymize data

--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -1626,7 +1626,7 @@
     " - 4a: Engage the predefined companies to set 2 degree targets.\n",
     " - 4b: Engage the predefined companies to set well below 2 degree targets. This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees celcius.\n",
     "\n",
-    "In this example, we identified a couple of companies above where we think we can have some success in our engagement efforts. Next, we will therefore investigate the effect of engaging Company Q and Company AF in setting targets."
+    "In this example, we identified a couple of companies above where we think we can have some success in our engagement efforts. Next, we will therefore investigate the effect of engaging Company Q and Company AM in setting targets."
    ]
   },
   {
@@ -1666,15 +1666,15 @@
      "name": "#%% md\n"
     }
    },
-   "source": [
-    "#### Portfolio temperature score impact\n",
-    "In our what-if analysis, we can now add Company Q and Company AF with company IDs CA0000000017 and ID0000000032 to to the companies which have set a target. Please note that our example portfolio file contains a column named \"engagement_target\". The companies with values of 1.0 in this column are included in this scenario. The cell below adds Company Q and Company AF to these other predefined companies in the portfolio, which were already marked for engagement.\n",
-    "\n",
-    "You can add more companies to target by copying line 2 or 3 of the following cell and replacing the company ID by the ID of your selected company.\n",
-    "\n",
-    "##### Quick analysis\n",
-    "As we can see below, the impact on our portfolio TS of engaging with the companies selected for engagement reduces our portfolio temperatures score from 2.55C to 2.50C."
-   ]
+    "source": [
+      "#### Portfolio temperature score impact\n",
+      "In our what-if analysis, we can now add Company Q and Company AM with company IDs CA0000000017 and FR0000120644 to to the companies which have set a target. Please note that our example portfolio file contains a column named \"engagement_target\". The companies with values of 1.0 in this column are included in this scenario. The cell below adds Company Q and Company AM to these other predefined companies in the portfolio, which were already marked for engagement.\n",
+      "\n",
+      "You can add more companies to target by copying line 2 or 3 of the following cell and replacing the company ID by the ID of your selected company.\n",
+      "\n",
+      "##### Quick analysis\n",
+      "As we can see below, the impact on our portfolio TS of engaging with the companies selected for engagement reduces our portfolio temperatures score from 2.63C to 2.46C."
+    ]
   },
   {
    "cell_type": "code",
@@ -1685,12 +1685,11 @@
     }
    },
    "outputs": [],
-   "source": [
-    "scenario_portfolio = portfolio.copy()\n",
-    "scenario_portfolio['engagement_target'] = False\n",
-    "scenario_portfolio.loc[scenario_portfolio['company_id'] == 'CA0000000017', 'engagement_target'] = True\n",
-    "scenario_portfolio.loc[scenario_portfolio['company_id'] == 'ID0000000032', 'engagement_target'] = True"
-   ]
+    "source": [
+      "scenario_portfolio = portfolio.copy()\n",
+      "scenario_portfolio.loc[scenario_portfolio['company_id'] == 'CA0000000017', 'engagement_target'] = True\n",
+      "scenario_portfolio.loc[scenario_portfolio['company_id'] == 'FR0000120644', 'engagement_target'] = True"
+    ]
   },
   {
    "cell_type": "code",
@@ -1741,7 +1740,7 @@
     "The first block shows the scope 1 and 2 mid-term temperature scores per sector calculated with the current temperature scores. The second block shows the temperature scores of the same categories, but now based on the what-if scenario where the chosen companies have set 2 degree targets.\n",
     "\n",
     "##### Quick analysis\n",
-    "The Energy, Consumer Staples and Communication sectors are no longer scoring above 3.0C. We still need to do some work in the Materials and Financials sector, to reduce these sector scores."
+    "The Energy and Communication and Real Estate sectors are no longer scoring above 3.0C. We still need to do some work in the Consumer Staples, Materials and Financials sectors, to reduce these sector scores."
    ]
   },
   {
@@ -1835,7 +1834,7 @@
    },
    "source": [
     "#### Company temperature score contribution impact\n",
-    "If our engagement is successful we can see that both Company Q and Company AF would disappear from from the list of biggest contributing companies to our TS."
+    "If our engagement is successful we can see that both Company Q and Company AM would disappear from from the list of biggest contributing companies to our TS."
    ]
   },
   {
