--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -204,7 +204,7 @@
         "* CDP\n",
         "* ISS\n",
         "* MSCI\n",
-        "* TruCost and\n",
+        "* TruCost\n",
         "* Urgentem\n",
         "\n",
         "can provide some or all of the data needed for the SBTi-Finance Tool.\n",
