--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# SBTi-Finance Tool - Target Reporting\n",
-    "This notebook is an example of how to use the tool to calculate your portfolio's temperature scores and to save results to be submitted to SBTi's Target Validation Team (TVT) for validation and approval of your own Science Based Target.\n",
-    "\n",
-    "Please see the [methodology, guidance](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf) and the [technical documentation](http://getting-started.sbti-tool.org/) for more details on how to calculate portfolio temperature scores and how to submit targets to the SBTi for validation and approval. \n",
-    "\n",
-    "See 1_analysis_example for more in depth example of how to work with Jupyter Notebooks in general and SBTi notebooks in particular. "
-   ]
+    "source": [
+      "# SBTi-Finance Tool - Target Reporting\n",
+      "This notebook is an example of how to use the tool to calculate your portfolio's temperature scores and to save results to be submitted to SBTi's Target Validation Team (TVT) for validation and approval of your own Science Based Target.\n",
+      "\n",
+      "Please see the [methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf), [guidance](https://sciencebasedtargets.org/financial-institutions) and the [technical documentation](http://getting-started.sbti-tool.org/) for more details on how to calculate portfolio temperature scores and how to submit targets to the SBTi for validation and approval. \n",
+      "\n",
+      "See 1_analysis_example for more in depth example of how to work with Jupyter Notebooks in general and SBTi notebooks in particular. "
+    ]
   },
   {
    "cell_type": "markdown",
@@ -772,10 +772,10 @@
    "source": [
     "## Checks\n",
     "In this example, the following scores are calculated:\n",
-    "- Portfolio score\n",
+    "- Portfolio temperature score\n",
     "- Score for each sector\n",
     "- Percentage covered by targets vs. default scores\n",
-    "- Percentage of SBTs in portfolio"
+    "- Portfolio coverage"
    ]
   },
   {
@@ -798,7 +798,7 @@
     }
    ],
    "source": [
-    "# Portfolio score\n",
+    "# Portfolio temperature score\n",
     "print_aggregations(aggregated_scores)"
    ]
   },
@@ -1015,10 +1015,10 @@
     }
    ],
    "source": [
-    "# Percentage of SBTs in portfolio\n",
+    "# Portfolio coverage: Percentage of SBTs in portfolio\n",
     "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
     "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), PortfolioAggregationMethod.WATS)\n",
-    "print(\"Part of portfolio with SBTi approved targets is {c:.2f}%\".format(c=coverage))"
+    "print(\"Portfolio coverage is {c:.2f}%\".format(c=coverage))"
    ]
   },
   {
